Helm/Kong/Ingress/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kong-postgres-service
  labels:
    app: postgres  
spec:
  type: NodePort
  selector:
    app: postgresql
  ports:
    - protocol: TCP
      port: 5432 #Cluster IP Level
      targetPort: 5432
      nodePort: 30540  #External Port
