Helm/Kong/Ingress/kong-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: meridian-tenants
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - host: services.meridian.com # add this entry to your host file - 127.0.0.1 services.meridian.com
    http:
      paths:
        - path: "/apis/tenants"
          pathType: Prefix
          backend:
            service:
             name: dev-tenants-meridian-tenants # this is name of the service
             port:
                number: 80 # this is the service's cluster port exposed to be talked to a lot
        - path: "/apis/domains"
          pathType: Prefix
          backend:
            service:
             name: dev-domains-meridian-domains # this is name of the service
             port:
                number: 80 # this is the service's cluster port exposed to be talked to a lot
